; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_perf_kdebug.c__sysctl_setup.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_perf_kdebug.c__sysctl_setup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CTL_KERN = common dso_local global i32 0, align 4
@KERN_KDEBUG = common dso_local global i32 0, align 4
@KERN_KDSETUP = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"KERN_KDSETUP sysctl failed\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @_sysctl_setup to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_sysctl_setup() #0 {
  %1 = alloca [3 x i32], align 4
  %2 = getelementptr inbounds [3 x i32], [3 x i32]* %1, i64 0, i64 0
  %3 = load i32, i32* @CTL_KERN, align 4
  store i32 %3, i32* %2, align 4
  %4 = getelementptr inbounds i32, i32* %2, i64 1
  %5 = load i32, i32* @KERN_KDEBUG, align 4
  store i32 %5, i32* %4, align 4
  %6 = getelementptr inbounds i32, i32* %4, i64 1
  %7 = load i32, i32* @KERN_KDSETUP, align 4
  store i32 %7, i32* %6, align 4
  %8 = getelementptr inbounds [3 x i32], [3 x i32]* %1, i64 0, i64 0
  %9 = call i64 @sysctl(i32* %8, i32 3, i32* null, i32* null, i32* null, i32 0)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %0
  %12 = call i32 @T_FAIL(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  br label %13

13:                                               ; preds = %11, %0
  ret void
}

declare dso_local i64 @sysctl(i32*, i32, i32*, i32*, i32*, i32) #1

declare dso_local i32 @T_FAIL(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
